2006-05-20  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (Darcs.doVCFull): when writing the
	.darcs-context file, use binary mode. I think this was causing a
	Darcs failure under windows.

2006-05-19  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/tryclient.py (CVSExtractor.getBaseRevision):
	use a timezone string of +0000 and gmtime, since this timestamp is
	sent to a buildmaster and %z is broken.

	* buildbot/test/test_vc.py (CVSHelper.getdate): use no timezone
	string and localtime, since this timestamp will only be consumed
	locally, and %z is broken.

	* buildbot/slave/commands.py (CVS.parseGotRevision): use +0000 and
	gmtime, since this timestamp is returned to the buildmaster, and
	%z is broken.

2006-05-18  Brian Warner  <warner@lothar.com>

	* NEWS: update in preparation for next release

	* buildbot/test/test_vc.py (VCS_Helper): factor out all the
	setup-repository and do-we-have-the-vc-tools code into a separate
	"helper" class, which sticks around in a single module-level
	object. This seems more likely to continue to work in the future
	than having it hide in the TestCase and hope that TestCases stick
	around for a long time.

	* buildbot/test/test_vc.py (MercurialSupport.vc_create): 'hg
	addremove' has been deprecated in recent versions of mercurial, so
	use 'hg add' instead

2006-05-07  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Try_Jobdir.messageReceived): when
	operating under windows, move the file before opening it, since
	you can't rename a file that somebody has open.

	* buildbot/process/base.py (Build.setupBuild): if something goes
	wrong while creating a Step, log the name and arguments, since the
	error message when you get the number of arguments wrong is really
	opaque.

2006-05-06  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial.setupEnvironment): more
	bugs in twisted-specific code not covered by my unit tests, this
	time use 'cmd' argument instead of self.cmd
